--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 		"@nextui-org/button": "2.2.3",
 		"@nextui-org/card": "^2.2.7",
 		"@nextui-org/code": "2.2.3",
+		"@nextui-org/form": "^2.1.7",
 		"@nextui-org/image": "^2.2.3",
 		"@nextui-org/input": "2.4.3",
 		"@nextui-org/kbd": "2.2.3",
 		"@nextui-org/link": "2.2.3",
 		"@nextui-org/listbox": "2.3.3",
 		"@nextui-org/navbar": "2.2.3",
+		"@nextui-org/select": "^2.4.8",
 		"@nextui-org/snippet": "2.2.4",
 		"@nextui-org/switch": "2.2.3",
 		"@nextui-org/system": "2.4.3",
@@ -25,6 +27,7 @@
 		"@react-aria/ssr": "3.9.7",
 		"@react-aria/visually-hidden": "3.8.18",
 		"clsx": "2.1.1",
+		"extract-colors": "^4.1.1",
 		"framer-motion": "11.13.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "15.0.4",
