--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix",
+		"createImage": "powershell.exe ./scripts/CreateImage.ps1"
 	},
 	"dependencies": {
+		"@material/material-color-utilities": "^0.3.0",
 		"@nextui-org/button": "2.2.3",
 		"@nextui-org/card": "^2.2.7",
 		"@nextui-org/code": "2.2.3",
@@ -24,12 +26,16 @@
 		"@nextui-org/switch": "2.2.3",
 		"@nextui-org/system": "2.4.3",
 		"@nextui-org/theme": "2.4.1",
+		"@nextui-org/tooltip": "^2.2.6",
 		"@react-aria/ssr": "3.9.7",
 		"@react-aria/visually-hidden": "3.8.18",
+		"axios": "^1.7.9",
 		"clsx": "2.1.1",
-		"extract-colors": "^4.1.1",
+		"dotenv": "^16.4.7",
+		"fast-average-color-node": "^3.1.0",
 		"framer-motion": "11.13.1",
 		"intl-messageformat": "^10.5.0",
+		"motion": "^11.15.0",
 		"next": "15.0.4",
 		"next-themes": "^0.4.4",
 		"react": "18.3.1",
